tdf#77961 set display grid to false if the attribute is missing

Display-grid attribute is absent in the ODT file created by
Word. We prefer it to be invisible in this case.

Change-Id: I5abc301f76f547f78a55a507b61396bae0de1f71